<resources>
    <string name="app_name">Farabi Stop Merokok</string>
    <string name="title_home">Sesi</string>
    <string name="title_poster">Poster</string>
    <string name="title_profile">Profile</string>
    <string name="stop_merokok">Stop</string>
    <string name="merokok_ada">

Merokok adalah kegiatan berupa membakar batang rokok dan menghisap atau menikmati asap hasil pembakaran nikotin tersebut. \n\nPerokok adalah seseorang yang melakukan aktivitas merokok.\n\nRokok merupakan salah satu penyumbang kematian terbanyak menurut WHO (WHO, 2015). Diperkirakan tahun 2030, angka kematian akibat merokok di dunia akan mencapai 10 juta jiwa dimana 70 % diantaranya berasal dari negara berkembang seperti Indonesia (Infodatin, 2015). \n
</string>
    <string name="merokok_dap">

Merokok dapat merusak hampir seluruh tubuh kalian. Terdapat berbagai macam penyakit yang diakibatkan oleh rokok, antara lain : \n\n1. Kanker Paru-paru\n2. Menyebabkan Kanker Lain\n3. Penyakit Paru Obstruktif Kronik (PPOK)\n4. Penyakit Jantung\n5. Stroke\n6. Buerger Disease\n7. Asma\n8. Masalah Penglihatan\n9. Radang Gusi\n10. Penuaan Dini\n\n\n\n
</string>
    <string name="kamu_akan_d">

1.\tKamu akan disukai banyak teman. Temanmu akan menyukai mu jika kamu melakukan kegiatan yang positif. Banyak remaja remaja yang lebih menyukai bergaul dengan sesama remaja yang tidak merokok.\n\n2.\tKamu tidak dihindari teman. Rokok menyebabkan bau mulut dan bau badan karena asap rokok. Jika kamu bau saat berbicara dan saat berdekatan, maka teman akan menghindari untuk berdekatan denganmu. Bau rokok dapat melekat dengan erat di mulut, rambut dan badanmu yang sulit dihilangkan dengan parfum ataupun obat kumur. \n
</string>
    <string name="kamu_memili">

3.\tKamu memiliki senyum yang indah dan menawan. Ketika kamu merokok, nikotin menyebabkan gigi berwarna kuning dan menghitam, sehingga saat tersenyum terlihat gigi berwarna kusam, gusi menghitam dan terlihat kurang bagus serta tidak sehat. \n\n4.\tKamu akan terlihat lebih keren. Semua kegiatan yang akan kamu lakukan, akan menjadi terlihat keren jika melakukannya dengan tidak merokok.\n\n5.\tKamu akan memiliki tubuh yang sehat. Rokok dapat merusak organ paru, meningkatkan risiko penyakit kanker, meningkatkan risiko serangan jantung dan stroke serta masih banyak penyakit lainnya. \n\n6.\tKamu akan memiliki fisik yang kuat. Karbon monoksida (CO) menurunkan persediaan oksigen untuk jaringan seluruh tubuh termasuk jantung. CO mengganggu pelepasan oksigen, dan mempercepat pengapuran/penebalan dinding pembuluh darah. CO menurunkan kapasitas latihan fisik, sehingga mempermudah penggumpalan darah. Hal ini menyebabkan fisik seseorang menjadi lemah jika merokok.\n
</string>
    <string name="kamu_akan_t">

7.\tKamu akan terhindar dari penyakit menyakitkan. Merokok meningkatkan risiko penyakit mematikan seperti kanker paru-paru, stroke, serangan jantung, kanker lainnya. Semua risiko penyakit ini dapat datang kapan saja, dapat terjadi walau di usia yang sangat muda.  \n\n8.\tKamu akan terlihat lebih muda. Tahukah kamu bahwa merokok bisa mengurangi asupan oksigen ke kulit sehingga membuat kulit tampak kusam. Jika kamu tidak merokok, kulit akan mendapatkan banyak oksigen sehingga mencegah penuaan dini dan mencegah keriput sebelum waktunya. \n\n9.\tMasa depan cerah dengan tidak merokok. Tahukah kamu beberapa profesi membutuhkan fisik yang sehat dan stamina yang baik sebagai syarat mendaftar. Jika kamu merokok, kesehatanmu akan terganggu, sehingga bersaing dengan temanmu yang tidak merokok. Kamu yakin akan mengagalkan masa depanmu hanya karena rokok?\n
</string>
    <string name="kamu_dapat_">

10.\tKamu dapat menghemat uang. Coba kamu hitung berapa batang rokok setiap hari yang kamu hisap. Sejumlah uang itu akan lebih bermanfaat untuk dibelikan sesuatu yang lebih berarti dibandingkan dengan membeli rokok yang dapat merugikan kesehatan mu.
</string>
    <string name="berhenti_me">

Berhenti merokok memang tidak mudah, terutama bagi kamu yang sudah mencoba, maka efek nikotin sudah sampai di otak sehingga membuat selalu ingin merokok. Kamu masih bisa memiliki kesempatan yang besar untuk berhenti merokok, sebelum terkena dampak adiksi dari nikotin, pada akhirnya akan sulit untuk berhenti merokok. \n\n\tSaat ini, di usia mu yang masih muda, saatnya memutuskan untuk hidup sehat dan terhindar dari segala risiko penyakit yang mematikan tersebut. Tidak ada kata mustahil untuk berhenti merokok. Masa depan mu masih panjang, kamu masih ingin meraih cita-cita setinggi langit dan menjadi sehat terbebas dari risiko penyakit akibat rokok.\n\n\tUntuk berhenti merokok membutuhkan tekad yang kuat. Kamu tetapkan tekadmu, ingatkan dirimu akan tujuan utamamu berhenti merokok. Dengan tekad yang kuat, saat ada godaan datang, seperti teman yang menawarkan rokok, kamu akan teringat bahwa rokok mendatangkan hanya keburukan sehingga kamu dapat menolak tawaran merokok dan tidak tergoda untuk merokok. \nBerikut ini beberapa tips agar bisa terbebas dari rokok:\n\n1.\tSemua diawali dengan niat. Kamu harus bisa menetapkan niat. Kamu harus memiliki niat yang besar dan kuat untuk berhenti merokok. Dengan niat yang bulat, saat godaan datang, kamu tidak akan tergoda untuk mencoba merokok.  \n
</string>
    <string name="kamu_harus_">

2.\tKamu harus bisa terus berfikir akan manfaatnya. Begitu banyak manfaat kesehatan yang akan kamu rasakan ketika berhenti merokok, seperti yang disebutkan di atas. Kamu dapat menghindarkan orang sekitar mu dari penyakit akibat menjadi perokok pasif, dan menghemat uang.\n\n3.\tMulailah tetapkan tanggalnya. Kamu harus mulai menetapkan tanggal kapan kamu akan memulai berhenti merokok. Jangan pernah menunda waktu untuk berhenti merokok. Akan ada saja hambatan maupun godaan yang datang, namun kamu harus bisa kembali ke niat dan selalu berfikir akan manfaat yang akan kamu rasakan jika kamu berhenti merokok dan berfikir mengenai penyakit yang dapat menghampirimu jika kamu merokok.\n\n4.\tMinta dukungan orang sekitar. Utarakan niat baik ini kepada orang-orang terdekat, seperti keluarga, dan sahabat. Mereka yang peduli kepadamu pasti akan mendukung untuk hidup sehat dan dukungan itu akan sangat berarti. Kamu bisa juga mengajak sesama perokok untuk berhenti bersama-sama. \n\n5.\tLakukan banyak kegiatan positif. Perbanyak kegiatan positif yang anda lakukan seperti olahraga basket, olahraga taekwondo, mengikuti kegiatan remaja masjid dan masih banyak lagi. Dengan aktif melalui kegiatan yang bermanfaat, maka kamu akan lupa untuk merokok. \n
</string>
    <string name="olahraga_te">

6.\tOlahraga teratur. Selain membuat tubuh menjadi sehat, aktif bergerak bisa mengalihkan serta mengurangi keinginan untuk merokok. Kamu bisa lari mengelilingi komplek rumah Anda, lompat tali, sit-up atau olahraga lainnya yang bisa dilakukan tanpa perlu persiapan khusus. \n\n7.\tHindari semua pemicu. Hindari segala hal yang memicu untuk merokok, seperti berkumpul bersama teman-teman yang perokok. Hindari pula tempat-tempat yang kira-kira dipenuhi oleh perokok. \n
</string>
    <string name="sebagai_mus">

Sebagai muslim yang baik, muslim yang taat dan remaja masjid yang soleh, tentunya Alquran dan Hadits adalah sebagai pedoman hidup. Bahwa merokok adalah bagian dari keimanan. Hidup akan menjadi lebih tenang jika kita berpedoman terhadap AL-Quran dan Hadits serta mencontoh perilaku nabi Muhammad SAW. Hidup bahagia akan mudah terwujud apabila kita menjauhi laranganNya dan mentaati peraturan Nya.
</string>
    <string name="jadi_apakah">

Jadi\n\nApakah kalian masih mau merokok? Tentu Tidak.\n\nJika kalian ditawarkan rokok oleh teman kalian, apakah sudah bisa menolaknya? YA. pasti bisa saya tolak\n\nKatakan TIDAK untuk Rokok !!!\n
</string>

    <string-array name="jumlah">
        <item>1 - 3</item>
        <item>3 - 6</item>
        <item>7 - 9</item>
        <item>=>10</item>
    </string-array>
</resources>
