<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ArtikelActivity"
    android:orientation="vertical"
    android:background="@android:color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/LL_Artikel1"
        android:visibility="gone"
        >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white"
            >
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="Tidak Merokok itu Keren Lho"
                android:textSize="25sp"
                android:textColor="@android:color/black"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:layout_marginTop="20dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/artikel1"
                android:layout_marginTop="20dp"
                android:scaleType="fitXY"/>
        </LinearLayout>
    </ScrollView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/LL_Artikel2"
        android:visibility="gone">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/white">
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="Apakah merokok itu?"
                    android:textSize="25sp"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:layout_marginTop="20dp"/>
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:src="@drawable/artikel2"
                    android:layout_marginTop="20dp"
                    android:scaleType="fitXY"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/merokok_ada"
                    android:layout_margin="20dp"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/LL_Artikel3"
        android:visibility="gone">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/white">
                <TextView
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:text="Kalian tau gak sih zat apa saja yang terkandung di dalam satu batang rokok?"
                    android:textSize="25sp"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:layout_marginTop="20dp"/>
                <com.github.chrisbanes.photoview.PhotoView
                    android:layout_width="350dp"
                    android:layout_height="600dp"
                    android:src="@drawable/artikel3"
                    android:layout_marginTop="20dp"
                    android:scaleType="fitXY"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/LL_Artikel4"
        android:visibility="gone">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/white">
                <TextView
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:text="Apa yang terjadi pada tubuh kita jika kita merokok? "
                    android:textSize="25sp"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:layout_marginTop="20dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/merokok_dap"
                    android:layout_margin="20dp"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/LL_Artikel5"
        android:visibility="gone">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/white">
                <TextView
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:text="Ini adalah keuntungan yang kamu dapatkan jika tidak merokok :"
                    android:textSize="25sp"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:layout_marginTop="20dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kamu_akan_d"
                    android:layout_margin="20dp"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"/>
                <com.github.chrisbanes.photoview.PhotoView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/artikel5"
                    android:layout_marginTop="5dp"
                    android:scaleType="fitXY"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kamu_memili"
                    android:layout_margin="20dp"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"/>
                <com.github.chrisbanes.photoview.PhotoView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/artikel5_2"
                    android:layout_marginTop="0dp"
                    android:scaleType="fitXY"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kamu_akan_t"
                    android:layout_margin="20dp"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"/>
                <com.github.chrisbanes.photoview.PhotoView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/artikel5_3"
                    android:layout_marginTop="0dp"
                    android:scaleType="fitXY"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kamu_dapat_"
                    android:layout_margin="20dp"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/LL_Artikel6"
        android:visibility="gone">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/white">
                <TextView
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:text="Ayo Kamu Bisa BERHENTI merokok"
                    android:textSize="25sp"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:layout_marginTop="20dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/berhenti_me"
                    android:layout_margin="20dp"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"/>
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/artikel6_1"
                    android:scaleType="fitXY"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kamu_harus_"
                    android:layout_margin="20dp"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"/>
                <ImageView
                    android:layout_width="350dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/artikel6_2"
                    android:scaleType="fitXY"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/olahraga_te"
                    android:layout_margin="20dp"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"/>
                <com.github.chrisbanes.photoview.PhotoView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/artikel6_3"
                    android:scaleType="fitXY"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sebagai_mus"
                    android:layout_margin="20dp"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jadi_apakah"
                    android:layout_margin="20dp"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"/>
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:src="@drawable/artikel6_4"
                    android:scaleType="fitXY"
                    android:layout_marginBottom="20dp"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>